Add under construction

--- a/src/App.css
+++ b/src/App.css
@@ -1,84 +1,94 @@
-.App {
+body {
+  font-family: 'Karla', sans-serif;
+  background-image: url('./images/banana-leaf.jpg');
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  color: #ffffff;
+  padding-bottom: 75px;
+}
+@media (min-width: 768px) {
+  body {
+    padding-bottom: 110px;
+  }
+}
+
+.navbar-brand {
+  margin-right: 0;
+}
+.navbar-brand img {
+  height: 21px;
+}
+
+.navbar-dark {
+  padding-top: 35px;
+  padding-bottom: 35px;
+}
+.navbar-dark .navbar-text {
+  color: #ffffff;
+  opacity: 1;
+  padding: 0 20px;
+  border-right: 1px solid #ffffff;
+  font-size: 18px;
+  font-weight: bold;
   text-align: center;
 }
-
-.App-logo {
-  /* animation: App-logo-spin infinite 20s linear; */
-  /* height: 40vmin; */
-  /* pointer-events: none; */
+.navbar-dark .navbar-text:last-child {
+  border-right: 0;
 }
-
-.App-header {
-  /* background-color: #b1bdd6; */
-  /* min-height: 100vh; */
-  display: flex;
-  /* flex-direction: column; */
-  /* align-items: center; */
-  /* justify-content: center; */
-  font-size: calc(10px + 2vmin);
-  /* color: white; */
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
+@media (max-width: 767px) {
+  .navbar-dark {
+    padding-bottom: 0;
   }
 }
 
-.ui.secondary.menu .active.item {
-  font-weight: 700;
-  text-decoration: line-through;
-  font-size: 17px;
+.page-title {
+  font-size: 80px;
+  font-weight: bold;
+  margin-bottom: 6px;
+}
+@media (max-width: 767px) {
+  .page-title {
+    font-size: 35px;
+    margin-bottom: 14px;
+  }
 }
 
-.ui.secondary.menu .active.item {
-  background: none;
+.page-description {
+  max-width: 465px;
+  font-size: 18px;
+  margin-bottom: 59px;
+}
+@media (max-width: 767px) {
+  .page-description {
+    font-size: 14px;
+  }
 }
 
-.ui.secondary.menu .item {
-  font-size: 17px;
+p {
+  font-size: 14px;
+  margin-bottom: 21px;
 }
 
-.ui.basic.button,
-.ui.basic.buttons .button {
-  border-radius: 0px;
+.footer-social-links .social-link {
+  display: inline-block;
+  text-align: center;
+  line-height: 40px;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  background-color: #ffffff;
+  color: #000000;
+  margin-right: 16px;
+  transition: all 0.3s ease-in-out;
 }
-
-.menu-nav {
-  display: flex;
-  justify-content: space-between;
-  padding: 0;
+.footer-social-links .social-link:last-child {
+  margin-right: 0;
 }
-
-.menu-nav li {
-  width: 20%;
-  border-bottom: 2px solid white;
-  padding-bottom: 15px;
-  list-style-type: none;
-}
-
-.menu-nav li:hover {
-  border-bottom: 2px solid black;
-  font-weight: 700;
-}
-
-.menu-nav a {
+.footer-social-links .social-link:hover {
   text-decoration: none;
-  color: black;
+  background-color: #000000;
+  color: #ffffff;
 }
 
-#list a {
-  text-decoration: none;
-  color: black;
-}
-
-.right a {
-  display: flex;
-}
+/*# sourceMappingURL=bd-coming-soon.css.map */
